--- a/style.css
+++ b/style.css
@@ -16,4 +16,8 @@ h2{
   /* Center all <h2></h2> tags */
   text-align: center; 
 }
-
+img {
+ /* Change all images on the page *
+  float:right; 
+ height:100px;
+}
