--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-
-body {
+body 
+{
  /* Change the font for the entire page */
   /* Set the background color to light pink */
    /* Add some space to the left side */
