--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body
 {
  /* Change the font for the entire page */
  font-family:Helvetica, Arial, "sans-serif";
-  /* Set the background color to light purple */
- background-color:E8D6ED;
+  /* Set the background color to dark pink */
+ background-color:E75480;
    /* Add some space to the left side */
   margin-left: 20px;
 }
