--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
  /* Change the font for the entire page */
  font-family:Helvetica, Arial, "sans-serif";
   /* Set the background color to light pink */
- background-color:E75480;
+ background-color:light pink;
    /* Add some space to the left side */
   margin-left: 20px;
 }
